# brpc-demo

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  READNE.md  docker-compose.yml  init.sh  main.cpp
app/proto/: http_service.proto
app/service/: http_service.cpp  http_service.h
cmake/: brpc.cmake  gflags.cmake  glog.cmake  gtest.cmake  leveldb.cmake  protobuf.cmake
tests/: CMakeLists.txt
tests/demo/: gflags_test.cpp  hello_test.cpp  leveldb_test.cpp  protobuf_test.cpp
